Se pueden traer los resultados del test. Faltan las estadísticas
